--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Generate EPUB files",
     "type": "library",
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "ext-zip": "*",
+        "ext-dom": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.4"
